First commited as before_50417_rev1